# pointsball

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  progress.md  pyproject.toml
pointsball/: __init__.py  __main__.py
pointsball/assets/: fpl_datasets.py  reddit_datasets.py
pointsball/data/: auth.py  fpl_account.py  fpl_client.py  reddit_client.py
pointsball/features/: fpl_features.py
pointsball/models/: predictor.py
pointsball/optimizer/: squad.py
pointsball/resources/: reddit_resources.py
pointsball/schemas/: fpl_schemas.py  fpl_stats.py
tests/: conftest.py  test_features.py  test_fpl_data_client.py  test_fpl_dataset_assets.py  test_fpl_datasets.py  test_optimizer.py  test_predictor.py
tests/data/: fpl_dataset.csv  fpl_elements.csv  fpl_fixtures.json  fpl_fixtures.parquet  fpl_player_histories.csv  fpl_teams.csv  rolling_points_bps.csv
